# CameraDP

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/hwx/camera_doul/cameradp/: BaseFragment.java  CActivity.java  ImageLibActivity.java  ImageLibAdapter.java  ImageLib_pic_Fragment.java  ImageLib_video_Fragment.java  Item.java  PlayActivity.java  QuickAdapter.java
app/src/main/res/layout/: activity_imagelib.xml  activity_main.xml  activity_main_1.xml  fragment_imagelib.xml  fragment_imagelib_item.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: build.gradle
libuvccamera/src/main/java/com/serenegiant/common/: BaseFragmentActivity.java
usbCameraCommon/src/main/java/com/serenegiant/encoder/: MediaAudioEncoder.java  MediaMuxerWrapper.java
usbCameraCommon/src/main/java/com/serenegiant/usbcameracommon/: AbstractUVCCameraHandler.java  OpenVideoTag.java  UVCCameraHandler.java
usbCameraCommon/src/main/java/com/serenegiant/widget/: UVCCameraTextureView.java
usbCameraTest3/src/main/java/com/serenegiant/usbcameratest3/: MainActivity.java
usbCameraTest3/src/main/res/layout/: main.xml
usbCameraTest4/src/main/: AndroidManifest.xml
usbCameraTest4/src/main/java/com/serenegiant/serviceclient/: CameraClient.java
usbCameraTest4/src/main/java/com/serenegiant/usbcameratest4/: Camera2Fragment.java  (+2 more)
usbCameraTest4/src/main/res/layout/: activity_main.xml  fragment_main.xml
